[package]
name = "audio-device"
version = "0.1.0"
edition = "2024"

[dependencies]
audio-blocks = "0.5.0"
rtrb = "0.3.2"
thiserror = "2.0.17"

cpal = { version = "0.16.0", optional = true }
rtaudio = { version = "0.3.7", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }

[features]
default = ["cpal"]
cpal = ["dep:cpal"]
rtaudio = ["dep:rtaudio"]
serde = ["dep:serde"]
