[package]
authors = ["Stephan Eckes <stephan@neodsp.com>"]
categories = ["multimedia::audio"]
description = "A simple library to play and record audio in real-time"
edition = "2024"
license = "MIT OR Apache-2.0"
name = "audio-device"
readme = "README.md"
repository = "https://github.com/neodsp/audio-device"
version = "0.1.0"

[dependencies]
audio-blocks = "0.7.0"
rtrb = "0.3.2"
thiserror = "2.0.17"

cpal = { version = "0.17.3", optional = true }
cxx-juce = { version = "0.8.0", optional = true }
rtaudio = { version = "0.8.0", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }

# Web dependencies
js-sys = { version = "0.3", optional = true }
wasm-bindgen = { version = "0.2", optional = true }
wasm-bindgen-futures = { version = "0.4", optional = true }

[dependencies.web-sys]
features = [
  "AudioBuffer",
  "AudioBufferSourceNode",
  "AudioContext",
  "AudioContextOptions",
  "AudioContextState",
  "AudioDestinationNode",
  "AudioNode",
  "AudioProcessingEvent",
  "MediaDeviceInfo",
  "MediaDeviceKind",
  "MediaDevices",
  "MediaStream",
  "MediaStreamAudioSourceNode",
  "MediaStreamConstraints",
  "MediaStreamTrack",
  "MediaTrackConstraints",
  "Navigator",
  "ScriptProcessorNode",
  "Window",
]
optional = true
version = "0.3"

[features]
cpal = ["dep:cpal"]
default = ["rtaudio"]
juce = ["dep:cxx-juce"]
rtaudio = ["dep:rtaudio"]
serde = ["dep:serde"]
web = ["dep:js-sys", "dep:wasm-bindgen", "dep:wasm-bindgen-futures", "dep:web-sys"]
