[package]
authors = ["Stephan Eckes <stephan@neodsp.com>"]
categories = ["multimedia::audio"]
description = "A simple library to play and record audio in real-time"
edition = "2024"
license = "MIT OR Apache-2.0"
name = "audio-host"
readme = "README.md"
repository = "https://github.com/neodsp/audio-host"
version = "0.1.0"

[dependencies]
audio-blocks = "0.7.0"
rtrb = "0.3.2"
thiserror = "2.0.17"

cpal = { version = "0.17.3", optional = true }
cxx-juce = { version = "0.8.0", optional = true }
rtaudio = { git = "https://github.com/neodsp/rtaudio-rs", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }

[features]
cpal = ["dep:cpal"]
default = ["rtaudio"]
juce = ["dep:cxx-juce"]
rtaudio = ["dep:rtaudio"]
serde = ["dep:serde"]
