[package]
edition = "2021"
name = "web-audio-example"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
audio-device = { path = "../..", default-features = false, features = ["web"] }
console_error_panic_hook = "0.1"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
  "Document",
  "Element",
  "HtmlButtonElement",
  "HtmlElement",
  "HtmlOptionElement",
  "HtmlSelectElement",
  "Node",
  "Window",
  "console",
] }
